--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Don't Overthink It Grids</title>
+    <meta charset="utf-8">
+    <title>Simple-Grid</title>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css">
-    <link rel="stylesheet/less" href="less/simple-grid.less">
-
-    <script>
-        less = {
-            env: "development",
-        }
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
-    <script>
-        less.watch()
-    </script>
+    <link rel="stylesheet" href="css/simple-grid.css">
 </head>
 <body>
-    <h1>Don't Overthink It Grids <em>(while we wait for flexbox!)</em></h1>
+    <h1>Simple-Grid <small>Based on Chris Coyier's post <a href="http://css-tricks.com/dont-overthink-it-grids/">Don't Overthink It Grids</a></small></h1>
 
     <div class="grid">
         <div class="column two-thirds">
             <div class="module">
-                <h3>2/3</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                <h3>2/3 - Default grid</h3>
+                <p>THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. Checkmate. Your best is an idiot! Switzerland is small and neutral! We are more like Germany, ambitious and misunderstood! You guys realize you live in a sewer, right?</p>
             </div>
         </div>
         <div class="column one-third">
             <div class="module">
                 <h3>1/3</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies</p>
+                <p>All I want is to be a monkey of moderate intelligence who wears a suit… that's why I'm transferring to business school! Too much work. Let's burn it and say we dumped it in the sewer.</p>
             </div>
         </div>
     </div>
@@ -37,14 +28,14 @@
     <div class="grid gutter">
         <div class="column two-thirds">
             <div class="module">
-                <h3>2/3 (Opt-in Outside Padding)</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                <h3>2/3 (Opt-in Outside Gutter Padding)</h3>
+                <p>When the lights go out, it's nobody's business what goes on between two consenting adults. Dear God, they'll be killed on our doorstep! And there's no trash pickup until January 3rd. I found what I need. And it's not friends, it's things. And why did 'I' have to take a cab?</p>
             </div>
         </div>
         <div class="column one-third">
             <div class="module">
                 <h3>1/3</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam.</p>
+                <p>Yes! In your face, Gandhi! Guards! Bring me the forms I need to fill out to have her taken away! I don't know what you did, Fry, but once again, you screwed up!</p>
             </div>
         </div>
     </div>
@@ -97,45 +88,23 @@
             <div class="module">
                 <h3>1/1 - Inception</h3>
                 <div class="grid gutter">
+                    <div class="column one-eigth">
+                        <div class="module">
+                            <h3>1/8</h3>
+                        </div>
+                    </div>
                     <div class="column one-fourth">
                         <div class="module">
                             <h3>1/4</h3>
-                        </div>
-                    </div>
-                    <div class="column one-half">
-                        <div class="module">
-                            <h3>1/2</h3>
-                            <div class="grid">
-                                <div class="column one-fourth">
+                            <div class="grid gutter">
+                                <div class="column one-half">
                                     <div class="module">
-                                        <h3>1/4</h3>
+                                        <h3>1/2</h3>
                                     </div>
                                 </div>
                                 <div class="column one-half">
                                     <div class="module">
                                         <h3>1/2</h3>
-                                        <div class="grid gutter">
-                                            <div class="column one-fourth">
-                                                <div class="module">
-                                                    <h3>1/4</h3>
-                                                </div>
-                                            </div>
-                                            <div class="column one-half">
-                                                <div class="module">
-                                                    <h3>1/2</h3>
-                                                </div>
-                                            </div>
-                                            <div class="column one-fourth">
-                                                <div class="module">
-                                                    <h3>1/4</h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="column one-fourth">
-                                    <div class="module">
-                                        <h3>1/4</h3>
                                     </div>
                                 </div>
                             </div>
@@ -144,6 +113,40 @@
                     <div class="column one-fourth">
                         <div class="module">
                             <h3>1/4</h3>
+                            <div class="grid gutter">
+                                <div class="column one-half">
+                                    <div class="module">
+                                        <h3>1/2</h3>
+                                    </div>
+                                </div>
+                                <div class="column one-half">
+                                    <div class="module">
+                                        <h3>1/2</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column one-fourth">
+                        <div class="module">
+                            <h3>1/4</h3>
+                            <div class="grid gutter">
+                                <div class="column one-half">
+                                    <div class="module">
+                                        <h3>1/2</h3>
+                                    </div>
+                                </div>
+                                <div class="column one-half">
+                                    <div class="module">
+                                        <h3>1/2</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column one-eigth">
+                        <div class="module">
+                            <h3>1/8</h3>
                         </div>
                     </div>
                 </div>
